[gd_scene load_steps=2 format=3 uid="uid://bwm7d70uvtlg8"]

[ext_resource type="Script" path="res://Scripts/LevelEndMenu.gd" id="1_5lh47"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 647.0
script = ExtResource("1_5lh47")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="AccuracyHBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="AccuracyLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/AccuracyHBoxContainer"]
layout_mode = 2
text = "Accuracy:"
horizontal_alignment = 1

[node name="AccuracyValue" type="Label" parent="CenterContainer/Panel/VBoxContainer/AccuracyHBoxContainer"]
layout_mode = 2
text = "98.52%
"

[node name="TimeHBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TimeLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/TimeHBoxContainer"]
layout_mode = 2
text = "Time:"
horizontal_alignment = 1

[node name="TimeValue" type="Label" parent="CenterContainer/Panel/VBoxContainer/TimeHBoxContainer"]
layout_mode = 2
text = "98.52%
"

[node name="ContinueButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Continue
"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
